Fixed alignment

--- a/src/components/public/styles/form.css
+++ b/src/components/public/styles/form.css
@@ -42,3 +42,10 @@
   align-items: center;
   justify-content: center;
 }
+
+.input-boxes.contact {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-left: 6%;
+}
